Prepared fix for issue #1170.